--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
       <nav>
         <ul>
-          <li><a href="#">My work</a></li>
-          <li><a href="#">My skills</a></li>
-          <li><a href="#">Hire me</a></li>
+          <li><a href="#my-work">My work</a></li>
+          <li><a href="#my-skills">My skills</a></li>
+          <li><a href="mailto:saalimalmarhubi@gmail.com">Hire me</a></li>
         </ul>
       </nav>
     </header>
     <div class="social-header">
       <ul>
-        <li><a href="#"><img src="images/dribbble.png" alt="dribbble"></a></li>
-        <li><a href="#"><img src="images/behance.png" alt="behance"></a></li>
-        <li><a href="#"><img src="images/twitter.png" alt="twitter"></a></li>
+        <li><a href="https://www.instagram.com/saalimalmarhubi/" target="_blank"><img src="images/insta.png" alt="instagram"></a></li>
+        <li><a href="https://www.linkedin.com/in/saalimalmarhubi" target="_blank"><img src="images/linkedin.png" alt="linkedin"></a></li>
+        <li><a href="https://www.twitter.com/SaalimAlMarhubi" target="_blank"><img src="images/twitter.png" alt="twitter"></a></li>
       </ul>
     </div>
   </div>
@@ -60,20 +60,20 @@
     </svg>
   </div>
 
-  <section class="featured">
+  <section class="featured" id="my-work">
     <div class="left">
       <div class="inner transition2">
         <p class="subtitle">Featured Project</p>
-        <a href="#" class="featured-title">Expense Tracker - React - Speechly</a>
+        <a href="https://expense-tracker-saalim.netlify.app/" target="_blank" class="featured-title">Voice Powered Expense Tracker</a>
 
-        <p class="featured-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, dolores non temporibus nobis earum suscipit voluptatibus porro.</p>
+        <p class="featured-desc">In this project I built a voice powered expense tracker react app. I decided to integrate Speechly using React context and React Hooks to add voice capabilities. I improved my React knowledge with this project as I had to use various topics of knowledge to get the app running </p>
       </div>
     </div>
 
-    <img class="right transition2" src="images/project-1.png" alt="Featured Project">
+    <a href="https://expense-tracker-saalim.netlify.app/" target="_blank" ><img class="right transition2" src="images/project-1.png" alt="Featured Project"></a>
   </section>
 
-  <section class="skills">
+  <section class="skills" id="my-skills">
     <div class="skills-container">
       <ul>
         <li class="transition2">
@@ -81,21 +81,21 @@
             <img src="images/icon-frontend.svg" alt="UI/UX Icon">
           </div>
           <p class="skill-title">Frontend Web Development</p>
-          <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, officia.</p>
+          <p class="featured-desc skill-desc">Responsive websites built for an optimal user experience that achieves your business goals</p>
         </li>
         <li class="transition2">
           <div class="icon-container two">
             <img src="images/icon-ux.svg" alt="UI/UX Icon">
           </div>
           <p class="skill-title">UI UX Design</p>
-          <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, officia.</p>
+          <p class="featured-desc skill-desc">I work to the principle that less is more, while carefully and strategically including important details and interactions</p>
         </li>
         <li class="transition2">
           <div class="icon-container three">
             <img src="images/icon-logo.svg" alt="UI/UX Icon">
           </div>
-          <p class="skill-title">Identity Design</p>
-          <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, officia.</p>
+          <p class="skill-title">Digital Strategy & SEO</p>
+          <p class="featured-desc skill-desc">I can help with digital strategy to help your business flourish online. Through SEO, digital marketing, ads and a cohesive digital strategy I can drive traffic to your website.</p>
         </li>
       </ul>
     </div>
@@ -109,22 +109,10 @@
             <p class="subtitle">Apple Website Clone</p>
 
             <p class="featured-title">Apple</p>
-            <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium delectus id optio ipsum distinctio perferendis!</p>
+            <p class="featured-desc">In this project I cloned Apple's website using just HTML and CSS.</p>
           </div>
         </div>
-        <a href="#"><img src="images/apple.png" alt="Apple Website Clone"></a>
-    </div>
-
-    <div class="portfolio-container transition3">
-        <div class="portfolio-left">
-          <div class="inner">
-            <p class="subtitle">Cryptocurrency Tracker</p>
-
-            <p class="featured-title">Crypto tracker</p>
-            <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium delectus id optio ipsum distinctio perferendis!</p>
-          </div>
-        </div>
-        <a href="#"><img src="images/crypto.png" alt="Cryptocurrency tracker"></a>
+        <a href="https://appleclone2020.netlify.app/" target="_blank"><img src="images/apple.png" alt="Apple Website Clone"></a>
     </div>
 
     <div class="portfolio-container transition3">
@@ -132,12 +120,24 @@
           <div class="inner">
             <p class="subtitle">Nike Product Card</p>
 
-            <p class="featured-title">Nike ID</p>
-            <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium delectus id optio ipsum distinctio perferendis!</p>
+            <p class="featured-title">Product Card</p>
+            <p class="featured-desc">Responsive and animated product card created with HTML, CSS and Vanilla JavaScript</p>
           </div>
         </div>
-        <a href="#"><img src="images/nike.png" alt="Nike Product Card"></a>
+        <a href="https://nikeproductcard.netlify.app/" target="_blank"><img src="images/nike.png" alt="Nike Product Card"></a>
     </div>
+
+    <div class="portfolio-container transition3">
+      <div class="portfolio-left">
+        <div class="inner">
+          <p class="subtitle">Cryptocurrency Tracker</p>
+
+          <p class="featured-title">Crypto tracker</p>
+          <p class="featured-desc">A cryptocurrency price tracker React app pulling data from an external API using React Hooks and Axios</p>
+        </div>
+      </div>
+      <a href="#"><img src="images/crypto.png" alt="Cryptocurrency tracker"></a>
+  </div>
 
   </section>
 
